# gapbf

./: .gitignore  .pre-commit-config.yaml  Config.py  Logging.py  NEXT_STEPS.md  PathFinder.py  PathHandler.py  README.md  TASKS.md  TESTING_SUMMARY.md  config.example.yaml  config.yaml  config.yaml.backup  main.py  pyproject.toml  requirements.txt  test_skip.py
.github/: copilot-instructions.md
.github/agents/: chunked-commit.agent.md
.github/workflows/: quality.yml
scripts/: check_line_length.py
src/gapbf/: Config.py  Database.py  Logging.py  Output.py  PathFinder.py  PathHandler.py  cli_definitions.py  cli_helpers.py  cli_live.py  cli_runner.py  database_attempt_store.py  database_common.py  database_fingerprints.py  database_operations.py  database_run_store.py  database_schema.py  main.py  pathfinder_async.py  pathfinder_counting.py  pathfinder_geometry.py  pathfinder_traversal.py  pathhandler_adb.py  pathhandler_common.py  pathhandler_display.py  runtime.py  runtime_session.py  runtime_state.py  web.py  web_app.py  web_controller.py  web_controller_config.py  web_controller_runtime.py  web_controller_state.py  web_models.py  web_page.py
src/gapbf/web_static/: app.js  index.html  styles.css
src/gapbf/web_static/app/: board.js  config.js  init.js  io.js  logs.js  notifications.js  pattern.js  render.js  runtime.js  state.js  tooltip.js
src/gapbf/web_static/components/: controls_panel.html  grid_panel.html  log_panel.html  settings_panel.html  topLinks.js
src/gapbf/web_static/styles/: base.css  boards.css  forms.css  layout.css  status.css
tests/: conftest.py  test_config.py  test_database.py  test_integration.py  test_logging.py  test_main.py  test_pathfinder.py  test_pathhandler.py  test_pathhandler_adb.py  test_pathhandler_base.py  test_pathhandler_display.py  test_runtime.py  test_web.py  test_web_config.py  test_web_history.py  test_web_page.py  test_web_run.py  test_web_runtime.py
