[project]
name = "gapbf"
version = "0.1.0"
description = "Graph-based Android Pattern Brute Force tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.8.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
]

[project.scripts]
gapbf = "gapbf.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gapbf"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
